TILE_TAXIWAY_CORNER_GRASS_3 added to accepted tiles list. Building edition is now supported on MapEditor! LEVEL2.LVL now has some buildings laying around.

--- a/Source/MapEditor/buildings.ini
+++ b/Source/MapEditor/buildings.ini
@@ -2,3 +2,9 @@
 path = "../../Sprites/BLDNGS1.bmp"
 building0 = "Nothing"
 building1 = "Hangar"
+building2 = "ILS"
+building3 = "ATC Tower"
+building4 = "ATC Localizer"
+building5 = "Terminal"
+building6 = "Terminal2"
+building7 = "Gate"
